fix scrollbar styles

--- a/styles/global.scss
+++ b/styles/global.scss
@@ -52,3 +52,20 @@ body,
 html {
   background: var(--bg-main);
 }
+
+html::-webkit-scrollbar {
+  width: 10px;
+}
+
+html::-webkit-scrollbar-thumb {
+  border-radius: 8px;
+  background: var(--bg-inverse);
+
+  &:hover {
+    background: rgb(165, 165, 165);
+  }
+
+  &:active {
+    background: var(--bg-inverse);
+  }
+}
